--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/hmatwiejczyk/football-stats#readme",
   "devDependencies": {
+    "@types/node": "^12.6.2",
     "concurrently": "^4.1.1",
     "nodemon": "^1.19.1",
     "typescript": "^3.5.3"
